--- a/src/main/webapp/WEB-INF/views/DesignPage.html
+++ b/src/main/webapp/WEB-INF/views/DesignPage.html
@@ -119,10 +119,12 @@
                         aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
                         cillum dolore eu fugiat nulla pariatur.</p>
                     <hr>
-                    <div class="container">
-                        <div class="news">
+                    <div class="row">
+                        <div class="col-xs-6">
                             <p>min<br><i class="fa fa-dollar"></i>100000 <br></p>
-                            <p><i class="fa fa-dollar"></i>9999<br>Still needed</br></p>
+                        </div>
+                        <div class="col-xs-6">
+                            <p>Still needed</br><i class="fa fa-dollar"></i>9999<br></p>
                         </div>
                     </div>
                 </div>
@@ -143,40 +145,12 @@
                         aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
                         cillum dolore eu fugiat nulla pariatur.</p>
                     <hr>
-                    <div class="container">
-                        <div class="news">
+                    <div class="row">
+                        <div class="col-xs-6">
                             <p>min<br><i class="fa fa-dollar"></i>100000 <br></p>
-                            <p><i class="fa fa-dollar"></i>9999<br>Still needed</br></p>
                         </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-        <div class="item">
-            <div class="thumbnail">
-                <div class="caption centered">
-                    <a href="#"><h3>Project name</h3></a>
-                </div>
-                <a href="#"><img src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
-                <div class="caption">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
-                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-                        ut
-                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                        cillum dolore eu fugiat nulla pariatur.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
-                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-                        ut
-                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                        cillum dolore eu fugiat nulla pariatur.</p>
-                    <hr>
-                    <div class="container">
-                        <div class="news">
-                            <p>min<br><i class="fa fa-dollar"></i>100000 <br></p>
-                            <p><i class="fa fa-dollar"></i>9999<br>Still needed</br></p>
+                        <div class="col-xs-6">
+                            <p>Still needed</br><i class="fa fa-dollar"></i>9999<br></p>
                         </div>
                     </div>
                 </div>
@@ -196,19 +170,43 @@
                         aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
                         cillum dolore eu fugiat nulla pariatur.</p>
                     <hr>
-                    <div class="container">
-                        <div class="news">
+                    <div class="row">
+                        <div class="col-xs-6">
                             <p>min<br><i class="fa fa-dollar"></i>100000 <br></p>
-                            <p><i class="fa fa-dollar"></i>9999<br>Still needed</br></p>
+                        </div>
+                        <div class="col-xs-6">
+                            <p>Still needed</br><i class="fa fa-dollar"></i>9999<br></p>
                         </div>
                     </div>
-
                 </div>
-
+            </div>
+        </div>
+        <div class="item">
+            <div class="thumbnail">
+                <div class="caption centered">
+                    <a href="#"><h3>Project name</h3></a>
+                </div>
+                <a href="#"><img src="http://placehold.it/600x340" alt="" class="img-responsive"></a>
+                <div class="caption">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                        ut
+                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                        cillum dolore eu fugiat nulla pariatur.</p>
+                    <hr>
+                    <div class="row">
+                        <div class="col-xs-6">
+                            <p>min<br><i class="fa fa-dollar"></i>100000 <br></p>
+                        </div>
+                        <div class="col-xs-6">
+                            <p>Still needed</br><i class="fa fa-dollar"></i>9999<br></p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-
 </div>
 <div class="container">
     <div class="row">
@@ -228,9 +226,11 @@
                 <div class="caption">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore
-                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                        nisi
                         ut
-                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+                        esse
                         cillum dolore eu fugiat nulla pariatur.</p>
                     <span><a class="btn btn-success btn-block btn-md" href="#">I will go on</a></span>
                 </div>
@@ -246,9 +246,11 @@
                 <div class="caption">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore
-                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                        nisi
                         ut
-                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+                        esse
                         cillum dolore eu fugiat nulla pariatur.</p>
                     <span><a class="btn btn-success btn-block btn-md" href="#">I will go on</a></span>
 
@@ -265,9 +267,11 @@
                 <div class="caption">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore
-                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                        nisi
                         ut
-                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+                        esse
                         cillum dolore eu fugiat nulla pariatur.</p>
                     <span><a class="btn btn-success btn-block btn-md" href="#">I will go on</a></span>
                 </div>
