[#34] Implement user profile web page: init

--- a/src/main/webapp/WEB-INF/views/DesignPage.html
+++ b/src/main/webapp/WEB-INF/views/DesignPage.html
@@ -26,7 +26,9 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Great<i class="fa fa-rocket fa-lg" aria-hidden="true"><text/></i>Start </a>
+            <a class="navbar-brand" href="#">Great<i class="fa fa-rocket fa-lg" aria-hidden="true">
+                <text/>
+            </i>Start </a>
         </div>
         <div class="collapse navbar-collapse" id="responsive-menu">
             <ul class="nav navbar-nav navbar-left">
@@ -48,17 +50,17 @@
         </div>
     </div>
 </div>
-<div id="headerwrap">
+<div class="header-wrap">
     <div class="container">
         <div class="row centered">
             <div class="col-lg-8 col-lg-offset-2">
-                <h1>GreatStart is awesome!</h1>
-                <h2>Join us</h2>
+                <h1 class="title">GreatStart is awesome!</h1>
+                <h2 class="under-title">Join us</h2>
             </div>
         </div>
     </div>
 </div>
-<div class="container w">
+<div class="container column-wrap">
     <div class="row centered">
         <div class="col-lg-4 col-md-4 col-sm-4">
             <i class="fa fa-lightbulb-o fa-3x"></i>
@@ -276,7 +278,7 @@
     </div>
 </div>
 
-<div id="footer">
+<div class="footer">
     <div class="container">
         <div class="row centered">
             <a href="#"><i class="fa fa-twitter"></i></a>
