--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -79,6 +79,10 @@ hr {
     background-size: cover;
 }
 
+.right-box{
+    margin-left: 40%;
+}
+
 .title {
     margin-top: 100px;
     color: #333;
@@ -137,7 +141,6 @@ hr {
 .nav-tabs {
     margin-bottom: 15px;
 }
-
 
 /*****************************************************************/
 .navbar-default .navbar-brand:hover,
