--- a/src/main/webapp/WEB-INF/views/DesignPage.html
+++ b/src/main/webapp/WEB-INF/views/DesignPage.html
@@ -65,32 +65,34 @@
         <div class="col-lg-4 col-md-4 col-sm-4">
             <i class="fa fa-lightbulb-o fa-3x"></i>
             <h4>Ideas</h4>
-            <p><b>Just Text Example</b><br>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            <div><strong>Just Text Example</strong></div>
+            <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                 ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat nulla pariatur.</p>
+                fugiat nulla pariatur.
+            </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4">
             <i class="glyphicon glyphicon glyphicon-grain gi-3x"></i>
             <h4>Help</h4>
-            <p><b>Just Text Example</b><br>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            <div><strong>Just Text Example</strong></div>
+            <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                 ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat nulla pariatur.</p>
+                fugiat nulla pariatur.
+            </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4">
             <i class="fa fa-users fa-3x"></i>
             <h4>Projects</h4>
-            <p><b>Just Text Example</b><br>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            <div><strong>Just Text Example</strong></div>
+            <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                 ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat nulla pariatur.</p>
+                fugiat nulla pariatur.
+            </div>
         </div>
     </div>
-    <br><br>
 </div>
 
 <div class="container">
