--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -152,18 +152,28 @@ hr {
 }
 
 .btn-edit:hover {
+
     color: #fff;
     background-color: #47cc47;
     border-color: #3ca73c;
 }
 
 .navbar-footer-content {
+    padding: 15px;
+    padding-bottom:0;
     background: #108d19;
 }
 
 .big-photo {
     max-height: 320px;
     width: auto
+}
+.navbar-content
+{
+    width:320px;
+    padding: 15px;
+    padding-bottom:0;
+    background: #dbffd5;
 }
 
 /*****************************************************************/
