[#34] Implement user profile web page: init

--- a/src/main/webapp/WEB-INF/views/EditUserPage.html
+++ b/src/main/webapp/WEB-INF/views/EditUserPage.html
@@ -96,7 +96,7 @@
             <div class="panel panel-success">
                 <div class="panel-heading">
                     <h4>User Profile</h4>
-                    <a class="btn btn-edit pull-right" href="DesignPage1.html"><h4><i
+                    <a class="btn btn-edit pull-right" href="UserPage.html"><h4><i
                             class="glyphicon glyphicon-pencil"></i>Edit</h4>
                     </a>
                 </div>
