[#34] Implement user profile web page: init

--- a/src/main/webapp/WEB-INF/views/UserPage.html
+++ b/src/main/webapp/WEB-INF/views/UserPage.html
@@ -105,7 +105,7 @@
                     <div class="row">
                         <div class="col-lg-4 col-md-4 col-sm-4  hidden-xs">
                             <img class="img-responsive img-rounded big-photo"
-                                 src="http://vev.ru/uploads/images/00/07/64/2011/10/12/c26b1b.jpg"/>
+                                 src="http://vev.ru/uploads/images/00/07/64/2011/10/12/c26b1b.jpg" alt=""/>
                         </div>
                         <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
                             <div class="panel-info">
@@ -156,7 +156,7 @@
                             <div class="row masonry" data-columns>
                                 <div class="card">
                                     <a href="#"><img class="card-img-top img-responsive"
-                                                     src="https://goo.gl/bLja0p"></a>
+                                                     src="https://goo.gl/bLja0p" alt=""></a>
                                     <div class="card-block">
                                         <a href="#"><h4 class="card-title">The NOMATIC Backpack and Travel Pack</h4></a>
                                         <div class="card-text">
@@ -189,7 +189,7 @@
                                 </div>
                                 <div class="card">
                                     <a href="#"><img class="card-img-top img-responsive"
-                                                     src="https://goo.gl/e7PZpL"></a>
+                                                     src="https://goo.gl/e7PZpL" alt=""></a>
                                     <div class="card-block">
                                         <a href="#"><h4 class="card-title">Artificial Intelligence A-Z™: Learn How To Build An AI</h4></a>
                                         <div class="card-text">
@@ -222,7 +222,7 @@
                                 </div>
                                 <div class="card">
                                     <a href="#"><img class="card-img-top img-responsive"
-                                                     src="https://goo.gl/bLja0p"></a>
+                                                     src="https://goo.gl/bLja0p" alt=""></a>
                                     <div class="card-block">
                                         <a href="#"><h4 class="card-title">The NOMATIC Backpack and Travel Pack</h4></a>
                                         <div class="card-text">
