--- a/src/main/webapp/WEB-INF/views/EditUserPage.html
+++ b/src/main/webapp/WEB-INF/views/EditUserPage.html
@@ -104,13 +104,12 @@
                     <div class="row">
                         <div class="col-lg-4 col-md-4 col-sm-4  hidden-xs">
                             <img class="img-responsive img-rounded big-photo"
-                                 src="http://vev.ru/uploads/images/00/07/64/2011/10/12/c26b1b.jpg"/>
+                                 src="http://vev.ru/uploads/images/00/07/64/2011/10/12/c26b1b.jpg" alt=""/>
                         </div>
                         <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
                             <div class="panel-info">
                                 <div class="panel-body">
                                 </div>
-                                <!------------------->
                                 <form method="POST" id="user_form"></form>
                                 <table class="table">
                                     <tr>
