[#34] Implement user profile web page: add new version of user page design

--- a/src/main/webapp/WEB-INF/views/EditUserPage.html
+++ b/src/main/webapp/WEB-INF/views/EditUserPage.html
@@ -103,8 +103,15 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-lg-4 col-md-4 col-sm-4  hidden-xs">
-                            <img class="img-responsive img-rounded big-photo"
-                                 src="http://vev.ru/uploads/images/00/07/64/2011/10/12/c26b1b.jpg" alt=""/>
+                            <div>
+                                <img class="img-responsive img-rounded big-photo"
+                                     src="http://vev.ru/uploads/images/00/07/64/2011/10/12/c26b1b.jpg"/>
+                            </div>
+                            <div>
+                                <label class="btn btn-default btn-file">
+                                    Browse <input  accept="image/*" type="file" style="display: none;" form="user_form">
+                                </label>
+                            </div>
                         </div>
                         <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
                             <div class="panel-info">
