--- a/src/main/webapp/WEB-INF/views/EditUserPage.html
+++ b/src/main/webapp/WEB-INF/views/EditUserPage.html
@@ -105,7 +105,7 @@
                         <div class="col-lg-4 col-md-4 col-sm-4  hidden-xs">
                             <div>
                                 <img class="img-responsive img-rounded big-photo"
-                                     src="http://vev.ru/uploads/images/00/07/64/2011/10/12/c26b1b.jpg"/>
+                                     src="http://vev.ru/uploads/images/00/07/64/2011/10/12/c26b1b.jpg" alt=""/>
                             </div>
                             <div>
                                 <label class="btn btn-default btn-file">
