[#34] Implement user profile web page: add new version of user page design

--- a/src/main/webapp/WEB-INF/views/UserPageVer1.2.html
+++ b/src/main/webapp/WEB-INF/views/UserPageVer1.2.html
@@ -28,9 +28,9 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Great<i class="fa fa-rocket fa-lg" aria-hidden="true">
+            <a class="navbar-brand" href="#">Great<span class="fa fa-rocket fa-lg" aria-hidden="true">
                 <text/>
-            </i>Start</a>
+            </span>Start</a>
         </div>
         <div class="collapse navbar-collapse" id="responsive-menu">
             <ul class="nav navbar-nav navbar-left">
@@ -54,7 +54,7 @@
                              alt="UserName" width="30px" height="30px"/>
                     </span>
                     <span>UserName</span>
-                    <b class="caret"></b></a>
+                    <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li>
                             <div class="navbar-content">
@@ -70,15 +70,15 @@
                                             <div class="container"
                                                  style="margin-top:5px; font-size: 15px; font-weight: 500">
                                                 <ul class="non-marker">
-                                                    <li><a href="#"><i class="fa fa-user-o" aria-hidden="true"
-                                                                       style="margin-right: 5px"></i>My account</a></li>
-                                                    <li><a href="#"><i class="fa fa-star" aria-hidden="true"
-                                                                       style="margin-right: 5px"></i>Favourites</a></li>
-                                                    <li><a href="#"><i class="fa fa-question-circle-o"
-                                                                       style="margin-right: 5px"></i>Help</a></li>
+                                                    <li><a href="#"><span class="fa fa-user-o" aria-hidden="true"
+                                                                       style="margin-right: 5px"></span>My account</a></li>
+                                                    <li><a href="#"><span class="fa fa-star" aria-hidden="true"
+                                                                       style="margin-right: 5px"></span>Favourites</a></li>
+                                                    <li><a href="#"><span class="fa fa-question-circle-o"
+                                                                       style="margin-right: 5px"></span>Help</a></li>
                                                     <li><a href="#" class="btn btn-success btn-md"
-                                                           style="margin-top: 5px"><i class="fa fa-sign-out"
-                                                                                      aria-hidden="true"></i>Sign
+                                                           style="margin-top: 5px"><span class="fa fa-sign-out"
+                                                                                      aria-hidden="true"></span>Sign
                                                         Out</a></li>
                                                 </ul>
                                             </div>
@@ -100,7 +100,7 @@
                 <div class="panel-heading">
                     <h4>User Profile</h4>
                     <a class="btn btn-edit pull-right" href="EditUserPage.html">
-                        <h4><i class="glyphicon glyphicon-pencil"></i>Edit</h4>
+                        <h4><span class="glyphicon glyphicon-pencil"></span>Edit</h4>
                     </a>
                 </div>
                 <div class="panel-body">
@@ -181,11 +181,11 @@
                                         <div class="row">
                                             <div class="col-xs-6">
                                                 <div>min</div>
-                                                <div><i class="fa fa-dollar"></i>100000</div>
+                                                <div><span class="fa fa-dollar"></span>100000</div>
                                             </div>
                                             <div class="col-xs-6">
                                                 <div class="right-box">Still needed</div>
-                                                <div class="right-box"><i class="fa fa-dollar"></i>9999</div>
+                                                <div class="right-box"><span class="fa fa-dollar"></span>9999</div>
                                             </div>
                                         </div>
                                     </div>
@@ -215,11 +215,11 @@
                                         <div class="row">
                                             <div class="col-xs-6">
                                                 <div>min</div>
-                                                <div><i class="fa fa-dollar"></i>100000</div>
+                                                <div><span class="fa fa-dollar"></span>100000</div>
                                             </div>
                                             <div class="col-xs-6">
                                                 <div class="right-box">Still needed</div>
-                                                <div class="right-box"><i class="fa fa-dollar"></i>9999</div>
+                                                <div class="right-box"><span class="fa fa-dollar"></span>9999</div>
                                             </div>
                                         </div>
                                     </div>
@@ -248,11 +248,11 @@
                                         <div class="row">
                                             <div class="col-xs-6">
                                                 <div>min</div>
-                                                <div><i class="fa fa-dollar"></i>100000</div>
+                                                <div><span class="fa fa-dollar"></span>100000</div>
                                             </div>
                                             <div class="col-xs-6">
                                                 <div class="right-box">Still needed</div>
-                                                <div class="right-box"><i class="fa fa-dollar"></i>9999</div>
+                                                <div class="right-box"><span class="fa fa-dollar"></span>9999</div>
                                             </div>
                                         </div>
                                     </div>
@@ -358,9 +358,9 @@
 <div class="footer">
     <div class="container">
         <div class="row centered">
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-vk"></i></a>
+            <a href="#"><span class="fa fa-twitter"></span></a>
+            <a href="#"><span class="fa fa-facebook"></span></a>
+            <a href="#"><span class="fa fa-vk"></span></a>
         </div>
     </div>
 </div>
