[#34] Implement user profile web page: add new version of user page design

--- a/src/main/webapp/WEB-INF/views/UserPageVer1.2.html
+++ b/src/main/webapp/WEB-INF/views/UserPageVer1.2.html
@@ -192,7 +192,7 @@
                                 </div>
                                 <div class="card">
                                     <a href="#"><img class="card-img-top img-responsive"
-                                                     src="https://goo.gl/e7PZpL"></a>
+                                                     src="https://goo.gl/e7PZpL" alt=""></a>
                                     <div class="card-block">
                                         <a href="#"><h4 class="card-title">Artificial Intelligence A-Z™: Learn How To
                                             Build An AI</h4></a>
