--- a/src/main/webapp/WEB-INF/views/EditUserPage.html
+++ b/src/main/webapp/WEB-INF/views/EditUserPage.html
@@ -94,7 +94,7 @@
     <div class="row">
         <div class="col-xs-12">
             <div class="panel panel-success">
-                <div class="panel-heading" style="background: #f5f5f5 ">
+                <div class="panel-heading" style="background: #f5f5f5; border: 0">
                     <a class="btn btn-edit pull-right" href="UserPage.html">
                         <span class="glyphicon glyphicon-pencil"></span></a>
                     <h4>User Profile</h4>
