--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -176,13 +176,11 @@ hr {
 .btn-edit:hover {
 
     color: #000000;
-    background-color: #e9e9e9;
+    background-color: #d6d6d6;
     border-color: #333333;
 }
 .btn-edit span{
     color: #333333;
-    /*font-size: 30px;*/
-    /*padding: 20px;*/
 }
 
 .navbar-footer-content {
